[project]
name = "hass-mytpu"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
